# udpPacketManager

./: .gitignore  CITATION.cff  CMakeLists.txt  Dockerfile_software  Dockerfile_tmp  Makefile  README.md  README_CLI.md  README_INTEGRATION.md  README_RAW_DATA_HANDLING.md  TODO  action.yml  actions.yml  ascii_hdr_manager.c  ascii_hdr_manager.h  build.sh  build_docker.sh  dummy_data_producer.py  lofar_cli_channelisation.c  lofar_cli_extractor.c  lofar_cli_guppi_raw.c  lofar_cli_meta.h  lofar_udp_backends.cpp  lofar_udp_backends.hpp  lofar_udp_misc.c  lofar_udp_misc.h  lofar_udp_reader.c  lofar_udp_reader.h  mkdocs.yml  newProcessingMode.md  requirements.txt
.github/workflows/: main.yml  pull.yml
docs/: ARCHITECTURE.md  COMPILERS.md  NEW_PROCESSING_MODE.md  PREPARING_DSPSR_READY_INPUTS.md  README_CLI.md  README_CLI_GUPPI_RAW.md  README_INTEGRATION.md  README_RAW_DATA_HANDLING.md  README_io.md  TODO  compilers.md  index.md  newProcessingMode.md
docs/examples/: example_processor.c
paper/: .gitignore  codemeta.json  paper.bib  paper.md
src/CLI/: ascii_hdr_manager.c  ascii_hdr_manager.h  lofar_cli_extractor.c  lofar_cli_guppi_raw.c  lofar_cli_meta.c  lofar_cli_meta.h  lofar_cli_meta.h.in  lofar_cli_stokes.c
src/docker/: Dockerfile  Dockerfile_base  Dockerfile_dev  Dockerfile_github  Dockerfile_software  dockerfile_github
src/lib/: lofar_udp_backends.cpp  lofar_udp_backends.hpp  lofar_udp_calibration.c  lofar_udp_calibration.h  lofar_udp_general.c  lofar_udp_general.h  lofar_udp_general.h.in  lofar_udp_io.c  lofar_udp_io.h  lofar_udp_metadata.c  lofar_udp_metadata.h  lofar_udp_misc.c  lofar_udp_misc.h  lofar_udp_reader.c  lofar_udp_reader.h  lofar_udp_structs.c  lofar_udp_structs.h  lofar_udp_structs_metadata.c  lofar_udp_structs_metadata.h  lofar_udp_time.c  lofar_udp_time.h  metadata_structs.h
src/lib/io/: lofar_udp_io_DADA.c  lofar_udp_io_FILE.c  lofar_udp_io_HDF5.c  lofar_udp_io_ZSTD.c
src/lib/metadata/: ascii_hdr_manager.c  ascii_hdr_manager.h  dada_hdr_manager.c  dada_hdr_manager.h  lofar_udp_metadata_DADA.c  lofar_udp_metadata_GUPPI.c  lofar_udp_metadata_SIGPROC.c  metadata_structs.c  sigproc_hdr_manager.c  sigproc_hdr_manager.h
src/metadata/: ascii_hdr_manager.c  ascii_hdr_manager.h  dada_hdr_manager.c  dada_hdr_manager.h  lofar_udp_metadata.c  lofar_udp_metadata.h  sigproc_hdr_manager.c  sigproc_hdr_manager.h
src/misc/: bitshuffleMakefile  dreamBeamJonesGenerator.py  dummy_data_producer.py
tests/: CMakeLists.txt  hashVariables.txt
tests/lib_tests/: CMakeLists.txt  lib_io_tests.cpp  lib_main_tests.cpp  lib_metadata_tests.cpp  lib_reader_tests.cpp  lib_reference_files.cpp  lib_reference_files.hpp  lib_structs_tests.cpp  lib_time_tests.cpp
tests/referenceFiles/: .gitignore  metadata.yml  metadata_3.h  metadata_357.h  metadata_5.h  metadata_6.h  metadata_7.h  metadata_no_conf_data.h.yml  metadata_no_sbb.h  metadata_sbb_blt_mismatch.h  rebuild.sh  udp_16130.ucc1.2022-06-29T01:30:00.000  udp_16131.ucc1.2022-06-29T01:30:00.000  udp_16132.ucc1.2022-06-29T01:30:00.000  udp_16133.ucc1.2022-06-29T01:30:00.000
